# weatherwise

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  agents.md  launcher.py  pyproject.toml
.claude/: settings.json
.streamlit/: config.toml
data/: EMDAT_DATA_REPORT.md
docs/superpowers/plans/: 2026-03-22-weather-news-chat-app.md  2026-04-26-disasters-mcp-plan.md
docs/superpowers/specs/: 2026-03-22-weather-news-chat-app-design.md  2026-04-26-disasters-mcp-design.md
k8s/: configmap.yaml  deployment.yaml  gateway.yaml  secret.yaml  service.yaml
src/agent/: agent.py  config.py  disaster_card.py  models.py
src/mcp_servers/disasters/: loader.py  models.py  repository.py  server.py
src/mcp_servers/news/: gnews_client.py  models.py  server.py
src/ui/: app.py
src/ui/components/: disaster_card.py  news_card.py  weather_card.py
src/ui/styles/: custom.css
tests/: README.md  test_agent_models.py  test_disasters_loader.py  test_disasters_models.py  test_disasters_repository.py  test_disasters_server.py  test_gnews_client.py
tests/eval/: conftest.py  golden_dataset.py  test_grounding.py  test_trajectory.py  validators.py
tests/evals/: golden_dataset.py  test_agent_evals.py  validators.py
tests/unit/: conftest.py  test_agent_models.py  test_disaster_card.py  test_disasters_loader.py  test_disasters_models.py  test_disasters_repository.py  test_disasters_server.py  test_eval_validators.py  test_gnews_client.py  test_news_models.py
