[project]
name = "ai-training-weather"
version = "0.1.0"
description = "Streamlit chat app for weather and news powered by PydanticAI + MCP"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai[google,openai,anthropic]",
    "mcp-weather-server",
    "mcp",
    "httpx",
    "streamlit",
    "python-dotenv",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
