[project]
name = "ai-training-weather"
version = "0.1.0"
description = "Streamlit chat app for weather and news powered by PydanticAI + MCP"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai[google,openai,anthropic]",
    "mcp-weather-server",
    "mcp",
    "httpx",
    "streamlit",
    "python-dotenv",
    "pydantic",
    "pandas>=2.2",
    "pyarrow>=15",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
# Eval tests are opt-in: live LLM + MCP round-trips, slow, costs API quota.
# Run them explicitly with `uv run pytest tests/evals/ -m eval`.
addopts = "-m 'not eval'"
markers = [
    "eval: live agent eval (slow, requires running launcher and consumes LLM API quota)",
]
